# lifespeed

./: .gitignore  NOTICE  README.md  capacitor.config.js  capacitor.config.ts  esbuild.config.mjs  main.js  package-lock.json  package.json  preload.js
.claude/: CLAUDE.md  settings.local.json
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/nicheknack/atthespeedoflife/: FolderPickerPlugin.java  MainActivity.java
android/app/src/main/res/values/: strings.xml
docs/: multi-journal-ux-design.md  performance-baseline.md  regression-test-checklist.md
packaging/arch/: PKGBUILD
packaging/flatpak/: com.nicheknack.lifespeed.desktop  com.nicheknack.lifespeed.dev.yml  com.nicheknack.lifespeed.metainfo.xml
renderer/: index.html
renderer/css/: main.css
renderer/js/: about-section.js  about.js  app.js  debug-logger.js  editor.js  entries.js  files.js  finder.js  frontmatter.js  gestures.js  images.js  journal.js  marked-line-numbers.js  metadata-cache.js  niche-knack-config.js  platform.js  scroll-sync.js  search.js  settings.js  tags.js  theme-cache.js  undo.js
renderer/lib/: markdown-it-source-lines.js  marked-footnote.umd.min.js
scripts/: copy-to-releases.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: dialog.rs  entry.rs  file.rs  mod.rs  settings.rs
src-tauri/src/services/: path_service.rs
(+2 files in other folders)
