[package]
name = "lifespeed"
version = "1.0.2"
edition = "2021"
authors = ["Niche-Knack"]
description = "Blazing-fast journaling app"
license = "Apache-2.0"

[lib]
name = "lifespeed_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
dirs = "5"
log = "0.4"
env_logger = "0.10"
thiserror = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
